removed part of old model